Using new routes.

--- a/themes/base-bootstrap/templates/cart/estimate_shipping.twig
+++ b/themes/base-bootstrap/templates/cart/estimate_shipping.twig
@@ -87,7 +87,7 @@
                                 <i class="fa fa-ok-sign"></i>
                                 Update Total
                             </button>
-                            <a href="{{ routeUrl('cart.show') }}" class="btn">Cancel</a>
+                            <a href="{{ routeUrl('cart.get.show') }}" class="btn">Cancel</a>
                         </div>
                     </form>
                 {% endif %}
