--- a/themes/base-bootstrap/templates/layout/parts/header.twig
+++ b/themes/base-bootstrap/templates/layout/parts/header.twig
@@ -31,7 +31,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/login">Sign In</a></li>
-                <li><a href="{{ routeUrl('cart.show') }}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+                <li><a href="{{ routeUrl('cart.get.show') }}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
             </ul>
             <form  action="/search"
                    method="get"
