--- a/themes/base-bootstrap/templates/user/view_order.twig
+++ b/themes/base-bootstrap/templates/user/view_order.twig
@@ -4,8 +4,8 @@
 {% block pageTitle %}Order #{{ order.referenceNumber }}{% endblock %}
 
 {% set breadcrumbs = {
-    'Your Account': 'user/account',
-    'Order Details': 'user/view-order/' ~ order.id.getHex()
+    'Your Account': routeUrl('user.account'),
+    'Order Details': orderUrl(order)
 } %}
 
 {% block content %}
