--- a/themes/base-bootstrap/templates/layout/parts/footer.twig
+++ b/themes/base-bootstrap/templates/layout/parts/footer.twig
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <a href="{{ routeUrl('page.conditions') }}">Conditions of Use</a>
+                <a href="{{ routeUrl('page.terms') }}">Terms of Use</a>
                 | <a href="{{ routeUrl('page.privacy') }}">Privacy</a>
                 {# TODO: <?=SITE_COPY?> #}
             </div>
