--- a/themes/base-bootstrap/templates/home/index.twig
+++ b/themes/base-bootstrap/templates/home/index.twig
@@ -3,6 +3,8 @@
 {% block pageTitle %}Welcome{% endblock %}
 
 {% block content %}
+    {% embed 'helper/sitelinks-search.twig' only %}{% endembed %}
+
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
