Cleaning up themes.

--- a/themes/base-bootstrap/templates/checkout/pay.twig
+++ b/themes/base-bootstrap/templates/checkout/pay.twig
@@ -320,7 +320,7 @@
                                         </select>
                                     </div>
                                     <div class="span6" id="accepted-cards">
-                                        <img src="/a/base/img/cards.png" width="180" height="24" style="width: 180px; height: 24px;" alt="Credit cards accepted: Visa, Mastercard, American Express, Discover" />
+                                        <img src="{{ assetUrl('base', 'img/cards.png') }}" width="180" height="24" style="width: 180px; height: 24px;" alt="Credit cards accepted: Visa, Mastercard, American Express, Discover" />
                                     </div>
                                 </div>
                             </div>
@@ -330,7 +330,7 @@
                             <i class="fa fa-lock"></i> Place your order
                         </button>
                         <div class="pull-right">
-                            {% embed "helper/secure_logos.twig" only %}{% endembed %}
+                            {% embed "helper/secure-logos.twig" only %}{% endembed %}
                         </div>
                     </form>
                 </div>
