--- a/themes/base/scss/_kommerce.scss
+++ b/themes/base/scss/_kommerce.scss
@@ -1,10 +1,10 @@
 @import "general";
+@import "header";
 @import "footer";
 @import "price";
 @import "product";
 @import "cart";
 @import "totals";
-@import "navigation";
 @import "pagination";
 @import "product_grid";
 @import "search";
