--- a/themes/base-bootstrap/templates/layout/parts/flash_messages.twig
+++ b/themes/base-bootstrap/templates/layout/parts/flash_messages.twig
@@ -5,6 +5,9 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     {% for type, messages in flashMessages %}
+                        {% if type == 'error' %}
+                            {% set type = 'danger' %}
+                        {% endif %}
                         {% for message in messages %}
                             <div class="alert alert-{{ type }}">
                                 <button type="button" class="close" data-dismiss="alert">&times;</button>
