--- a/themes/base-bootstrap/templates/layout/parts/header.twig
+++ b/themes/base-bootstrap/templates/layout/parts/header.twig
@@ -1,4 +1,3 @@
-{% set SITE_NAME = 'Birdie\'s Perch' %}
 <div id="header">
     <div class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
@@ -36,19 +35,7 @@
                 </ul>
 
                 <div class="col-sm-3 navbar-right">
-                    <form  action="{{ routeUrl('search') }}"
-                           method="get"
-                           class="navbar-form navbar-right"
-                           role="search">
-                        <div class="input-group">
-                            <input type="text" name="q" class="form-control" placeholder="Search" value="{{ searchQuery }}">
-                            <div class="input-group-btn">
-                                <button type="submit" class="btn btn-default search-button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
+                    {% embed "helper/site-search.twig" only %}{% endembed %}
                 </div>
             </div>
         </div>
