--- a/themes/base-bootstrap/templates/checkout/pay.twig
+++ b/themes/base-bootstrap/templates/checkout/pay.twig
@@ -43,7 +43,7 @@
 
                                     <div class="cart-unit-price">
                                         <span class="hidden-sm">Unit Price:</span>
-                                        {% embed "helper/unit_price.twig" with {'price': cartItem.price } only %}{% endembed %}
+                                        {% embed "helper/unit-price.twig" with {'price': cartItem.price } only %}{% endembed %}
                                     </div>
 
                                     <div class="cart-qty">
