--- a/themes/base-bootstrap/templates/helper/order-details.twig
+++ b/themes/base-bootstrap/templates/helper/order-details.twig
@@ -12,15 +12,15 @@
             <div class="row">
                 <div class="col-sm-4">
                     <strong>Shipping Address</strong>
-                    {% embed 'helper/order_address.twig' with {'address': order.shippingAddress } only %}{% endembed %}
+                    {% embed 'helper/order-address.twig' with {'address': order.shippingAddress } only %}{% endembed %}
                     <hr>
                     <strong>Billing Address</strong>
-                    {% embed 'helper/order_address.twig' with {'address': order.billingAddress } only %}{% endembed %}
+                    {% embed 'helper/order-address.twig' with {'address': order.billingAddress } only %}{% endembed %}
                 </div>
                 <div class="col-sm-4">
                     <strong>Payment Information</strong>
                     <div>
-                        {% embed 'helper/order_payments.twig' %}{% endembed %}
+                        {% embed 'helper/order-payments.twig' %}{% endembed %}
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -103,7 +103,7 @@
                             {% endif %}
                             <span class="small text-muted">{{ orderItem.sku }}</span><br>
 
-                            {% embed 'helper/order_item_options.twig' with {'orderItem': orderItem} only %}{% endembed %}
+                            {% embed 'helper/order-item-options.twig' with {'orderItem': orderItem} only %}{% endembed %}
 
                             {# TODO: Add to cart if in stock
                             <?php if (orderItem.product !== null && orderItem.product.isInStock) { ?>
@@ -161,12 +161,12 @@
 
                             <div class="visible-xs">
                                 <br>
-                                {% embed 'helper/unit_price.twig' with {'price': orderItem.price } only %}{% endembed %}
+                                {% embed 'helper/unit-price.twig' with {'price': orderItem.price } only %}{% endembed %}
                             </div>
                         </td>
                         <td class="text-right">{{ orderItem.quantity }}</td>
                         <td class="text-right hidden-xs">
-                            {% embed 'helper/unit_price.twig' with {'price': orderItem.price } only %}{% endembed %}
+                            {% embed 'helper/unit-price.twig' with {'price': orderItem.price } only %}{% endembed %}
                         </td>
                         <td class="text-right">{{ orderItem.price.quantityPrice | displayPrice }}</td>
                     </tr>
