--- a/themes/base-bootstrap/templates/helper/product-grid.twig
+++ b/themes/base-bootstrap/templates/helper/product-grid.twig
@@ -11,7 +11,7 @@
         <div class="product-name">{{ product.name }}</div>
     </a>
 
-    {% embed "helper/rating_stars.twig" with {'rating': product.rating } only %}{% endembed %}
+    {% embed "helper/rating-stars.twig" with {'rating': product.rating } only %}{% endembed %}
 
     {% if product.isInStock %}
         <div class="availability">
