--- a/themes/base-bootstrap/templates/layout/base-admin.twig
+++ b/themes/base-bootstrap/templates/layout/base-admin.twig
@@ -9,13 +9,13 @@
 </head>
 <body>
     {% include 'layout/parts/header.twig' %}
-    {% include 'layout/parts/flash_messages.twig' %}
+    {% include 'layout/parts/flash-messages.twig' %}
     {% include 'layout/parts/breadcrumbs.twig' %}
     {#{% include 'macros/macros.twig' %}#}
     <div id="body">
         {% block content %}{% endblock %}
     </div>
-    {% include 'layout/parts/base_modal.twig' %}
+    {% include 'layout/parts/base-modal.twig' %}
     {% include 'layout/parts/footer.twig' %}
 </body>
 </html>
