--- a/themes/base-bootstrap/templates/layout/base-checkout.twig
+++ b/themes/base-bootstrap/templates/layout/base-checkout.twig
@@ -9,12 +9,12 @@
 </head>
 <body>
     {% include 'layout/parts/header-checkout.twig' %}
-    {% include 'layout/parts/flash_messages.twig' %}
+    {% include 'layout/parts/flash-messages.twig' %}
     {% include 'layout/parts/breadcrumbs.twig' %}
     <div id="body">
         {% block content %}{% endblock %}
     </div>
-    {% include 'layout/parts/base_modal.twig' %}
+    {% include 'layout/parts/base-modal.twig' %}
     {% include 'layout/parts/footer-checkout.twig' %}
 </body>
 </html>
