--- a/themes/base-bootstrap/templates/user/view-order.twig
+++ b/themes/base-bootstrap/templates/user/view-order.twig
@@ -10,6 +10,6 @@
 
 {% block content %}
     <div class="container">
-        {% embed "helper/order_details.twig" with {'order': order} only %}{% endembed %}
+        {% embed "helper/order-details.twig" with {'order': order} only %}{% endembed %}
     </div>
 {% endblock %}
