--- a/themes/base-foundation/templates/helper/product_grid.twig
+++ b/themes/base-foundation/templates/helper/product_grid.twig
@@ -9,7 +9,7 @@
     </a>
     <a href="{{ productUrl(product) }}">{{ productUrl(product) }}</a>
 
-    {% embed "helper/rating_stars.twig" with {'rating': product.rating } only %}{% endembed %}
+    {% embed "helper/rating-stars.twig" with {'rating': product.rating } only %}{% endembed %}
 
     {% if product.isInStock %}
         Out of Stock
