--- a/themes/base-foundation/templates/cart/show.twig
+++ b/themes/base-foundation/templates/cart/show.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
     {% if cart.cartItems is empty %}
-        {% include 'cart/parts/empty_cart.twig' %}
+        {% include 'cart/parts/empty-cart.twig' %}
     {% else %}
         <h2>Shopping Cart</h2>
         <table class="table">
@@ -60,10 +60,10 @@
                             <input type="hidden" name="id" value="{{ cartItem.id.getHex() }}">
                             <button type="submit">Remove item</button>
                         </form>
-                        {% embed "helper/unit_price.twig" with {'price': cartItem.price } only %}{% endembed %}
+                        {% embed "helper/unit-price.twig" with {'price': cartItem.price } only %}{% endembed %}
                     </td>
                     <td>
-                        {% embed "helper/unit_price.twig" with {'price': cartItem.price } only %}{% endembed %}
+                        {% embed "helper/unit-price.twig" with {'price': cartItem.price } only %}{% endembed %}
                     </td>
                     <td>
                         {{ cartItem.price.quantityPrice | displayPrice }}
@@ -76,7 +76,7 @@
         <p>Total ({{ cart.totalItems }} items):</p>
         <p>{{ cart.cartTotal.total | displayPrice }}</p>
 
-        {% embed "helper/checkout_button.twig" only %}{% endembed %}
+        {% embed "helper/checkout-button.twig" only %}{% endembed %}
 
         <form action="cart/apply-coupon" method="post">
             <input type="hidden" name="_token" value="{{ CSRF_TOKEN }}">
@@ -86,6 +86,6 @@
 
     {% endif %}
 
-    {% embed "helper/recommended_products.twig" with {'products': recommendedProducts, 'size': 'small' } only %}
+    {% embed "helper/recommended-products.twig" with {'products': recommendedProducts, 'size': 'small' } only %}
     {% endembed %}
 {% endblock %}
