--- a/themes/base-bootstrap/templates/checkout/complete.twig
+++ b/themes/base-bootstrap/templates/checkout/complete.twig
@@ -1,7 +1,7 @@
 {# @var order \inklabs\kommerce\EntityDTO\OrderDTO #}
 {# @var user \inklabs\kommerce\EntityDTO\UserDTO #}
 
-{% extends "layout/base.twig" %}
+{% extends 'layout/base.twig' %}
 
 {% block pageTitle %}Order Received{% endblock %}
 
