--- a/themes/base-bootstrap/templates/helper/product-grid.twig
+++ b/themes/base-bootstrap/templates/helper/product-grid.twig
@@ -11,14 +11,14 @@
         <div class="product-name">{{ product.name }}</div>
     </a>
 
-    {% embed "helper/rating-stars.twig" with {'rating': product.rating } only %}{% endembed %}
+    {% embed 'helper/rating-stars.twig' with {'rating': product.rating } only %}{% endembed %}
 
     {% if product.isInStock %}
         <div class="availability">
             <span class="out-of-stock">Out of Stock</span>
         </div>
     {% elseif product.isPriceVisible %}
-        {% embed "helper/price.twig" with {'price': product.price } only %}{% endembed %}
+        {% embed 'helper/price.twig' with {'price': product.price } only %}{% endembed %}
     {% endif %}
 
     <div style="clear: both;"></div>
