--- a/themes/base-bootstrap/templates/user/account.twig
+++ b/themes/base-bootstrap/templates/user/account.twig
@@ -1,7 +1,7 @@
 {# @var user \inklabs\kommerce\EntityDTO\UserDTO #}
 {# @var orders \inklabs\kommerce\EntityDTO\OrderDTO[] #}
 {% import 'macros/order.twig' as orderMacro %}
-{% extends "layout/base.twig" %}
+{% extends 'layout/base.twig' %}
 
 {% block pageTitle %}User Account - {{ user.fullName }}{% endblock %}
 
