--- a/themes/base-foundation/templates/cart/added.twig
+++ b/themes/base-foundation/templates/cart/added.twig
@@ -1,7 +1,7 @@
 {# @var cart \inklabs\kommerce\EntityDTO\CartDTO #}
 {# @var cartItem \inklabs\kommerce\EntityDTO\CartItemDTO #}
 {# @var recommendedProducts \inklabs\kommerce\EntityDTO\ProductDTO[] #}
-{% extends "layout/base.twig" %}
+{% extends 'layout/base.twig' %}
 
 {% block pageTitle %}{{ cartItem.product.name }}{% endblock %}
 
