--- a/themes/base-bootstrap/templates/cart/show.twig
+++ b/themes/base-bootstrap/templates/cart/show.twig
@@ -1,6 +1,6 @@
 {# @var cart \inklabs\kommerce\EntityDTO\CartDTO #}
 {# @var recommendedProducts \inklabs\kommerce\EntityDTO\ProductDTO[] #}
-{% extends "layout/base.twig" %}
+{% extends 'layout/base.twig' %}
 
 {% block pageTitle %}Shopping Cart{% endblock %}
 
@@ -73,11 +73,11 @@
                                                     </span>
                                                 </form>
                                                 <div class="visible-xs">
-                                                    {% embed "helper/unit-price.twig" with {'price': cartItem.price } only %}{% endembed %}
+                                                    {% embed 'helper/unit-price.twig' with {'price': cartItem.price } only %}{% endembed %}
                                                 </div>
                                             </td>
                                             <td class="text-right hidden-xs">
-                                                {% embed "helper/unit-price.twig" with {'price': cartItem.price } only %}{% endembed %}
+                                                {% embed 'helper/unit-price.twig' with {'price': cartItem.price } only %}{% endembed %}
                                             </td>
                                             <td class="cart-right">
                                                 {{ cartItem.price.quantityPrice | displayPrice }}
@@ -90,7 +90,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-7 col-sm-offset-5">
-                                {% embed "cart/parts/totals.twig" %}{% endembed %}
+                                {% embed 'cart/parts/totals.twig' %}{% endembed %}
                             </div>
                         </div>
                     </div>
@@ -101,10 +101,10 @@
                                 <span class="price-small">{{ cart.cartTotal.total | displayPrice }}</span>
                             </strong>
                             <br /><br />
-                            {% embed "helper/checkout-button.twig" only %}{% endembed %}
+                            {% embed 'helper/checkout-button.twig' only %}{% endembed %}
                         </div>
                         {% if cart.shipmentRate.rate is not null %}
-                            {% embed "cart/parts/modify-shipping-button.twig" with {'extraClass': 'btn-block'} %}{% endembed %}
+                            {% embed 'cart/parts/modify-shipping-button.twig' with {'extraClass': 'btn-block'} %}{% endembed %}
                         {% endif %}
 
                         <br>
@@ -122,7 +122,7 @@
                 </div>
             {% endif %}
 
-            {% embed "helper/recommended-products.twig" with {'products': recommendedProducts, 'size': 'small' } only %}
+            {% embed 'helper/recommended-products.twig' with {'products': recommendedProducts, 'size': 'small' } only %}
             {% endembed %}
         </div>
     </div>
