--- a/themes/base-bootstrap/templates/user/change-password.twig
+++ b/themes/base-bootstrap/templates/user/change-password.twig
@@ -1,4 +1,4 @@
-{% extends "layout/base.twig" %}
+{% extends 'layout/base.twig' %}
 
 {% block pageTitle %}User Account - Change Password{% endblock %}
 
