--- a/themes/base-foundation/templates/cart/show.twig
+++ b/themes/base-foundation/templates/cart/show.twig
@@ -1,6 +1,6 @@
 {# @var cart \inklabs\kommerce\EntityDTO\CartDTO #}
 {# @var recommendedProducts \inklabs\kommerce\EntityDTO\ProductDTO[] #}
-{% extends "layout/base.twig" %}
+{% extends 'layout/base.twig' %}
 
 {% block pageTitle %}Shopping Cart{% endblock %}
 
