Adding tests for add product to cart.

--- a/themes/base-bootstrap/templates/layout/parts/header.twig
+++ b/themes/base-bootstrap/templates/layout/parts/header.twig
@@ -25,7 +25,7 @@
                     <li class="divider-vertical hidden-xs"></li>
 
                     <li>
-                        <li><a href="{{ routeUrl('cart.get.show') }}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+                        <a href="{{ routeUrl('cart.get.show') }}"><i class="fa fa-shopping-cart"></i> Cart</a>
                         {# TODO:
                             <?php if ($cart !== null && $cart->totalQuantity > 0) { ?>
                                 (<?=$cart->totalQuantity?>)
